--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,36 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@import url('https://fonts.googleapis.com/css2?family=Odibee+Sans&display=swap');
+.home{
+  display: flex;
+  justify-content: space-between;
+  
+  font-family: Odibee Sans;
+  letter-spacing:  4px;
+  padding-bottom: 1px;
+  margin: 1px;
+}
+.border{
+  border: 1px solid black;
+  padding: 10px;
+  border-radius: 10px;
+  transition: ease-in-out 0.5s;
+
+}
+.border:hover{
+  transition: ease-in-out 0.5s;
+  background-color: beige;
+  transform: scale(1.1);
+
+}
+.border1{
+  width: max-content;
+  height: max-content;
+  border: 1px solid black;
+  border-radius: 1px;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
-}
+  
+  @media only screen and (max-width: 600px) {
+    body {
+      background-color: lightblue;
+    }
+  }
